<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/title_information_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textStyle="normal"
            android:textIsSelectable="true"
            android:text="@string/message_information_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionCleoApk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_download_cleo_apk"
                android:textSize="12sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/title_information_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textStyle="normal"
            android:textIsSelectable="true"
            android:text="@string/message_information_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionCleoScript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_download_cleo_scripts"
                android:textSize="12sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/title_information_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textStyle="normal"
            android:textIsSelectable="true"
            android:text="@string/message_information_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionSocialInstagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Instagram"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorStroke"
                app:strokeWidth="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionSocialVK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VK"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorStroke"
                app:strokeWidth="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionSocialTelegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telegram"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorStroke"
                app:strokeWidth="1dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/title_disable_ads"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textStyle="normal"
            android:textIsSelectable="true"
            android:text="@string/message_disable_ads"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionAdsActivateAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_activate_ads_all"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorStroke"
                app:strokeWidth="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionAdsDisableAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_disable_ads_all"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorStroke"
                app:strokeWidth="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionAdsDisableBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_disable_ads_banner"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorStroke"
                app:strokeWidth="1dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>