<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textName"
                android:text="Test Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textPath"
                android:text="textname.csa"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textSize="14dp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listFiles"
                android:layout_marginTop="1dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textActionEnableDisable"
                android:text="@string/action_enable_script"
                android:textSize="14dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textActionEditScript"
                android:text="@string/action_edit_script"
                android:textSize="14dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textActionDelete"
                android:text="@string/action_delete_script"
                android:textSize="14dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>